[package]
name = "hello_world"
version = "0.0.0"
# workspace = "../../"

# [dependencies.nickel]
# version = "*"

[dependencies]

futures="*"
pretty_env_logger="*"
hyper="0.12"
base64="*"
tokio="*"
serde="*"
serde_derive="1.0"
serde_json = "1.0"
reqwest="*"
chrono = "0.4"
hyper-tls = "0.3.0"
regex = "1"